complete engine::operations implementation + refactor + tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,6 @@
   "rust-analyzer.inlayHints.parameterHints.enable": true,
   "rust-analyzer.inlayHints.typeHints.enable": true,
   "rust-analyzer.rustfmt.extraArgs": [
-    "+nightly"
+    // "+nightly"
   ]
 }
