--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 enum_dispatch = "0.3.13"
 readonly = "0.2.13"
+strum = "0.27.2"
+strum_macros = "0.27.2"
 thiserror = "2.0.17"
